@@ -1,3 +1,8 @@
+2008-02-05  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* COPYING, Makefile: Added COPYING file with GPL2 license.
+	* Makefile.am: Removed unused file.
+
 2008-01-28  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* po/nl.po: Updated translation by André Offringa.
